Changed get(0) to be getFirst for the selectOne method.